<resources>
    <string name="app_name">Jay的工具</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_backup">备份</string>
    <string name="action_recovery">恢复</string>
    <string name="income">收入</string>
    <string name="expend">支出</string>
    <string name="input_sum">输入金额</string>
    <string name="default_account">默认账户</string>
    <string name="catering">餐饮</string>
    <string name="add_remark">添加备注</string>
    <string name="today">今日</string>
    <string name="statistics">统计</string>
    <string name="save">保存</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multi">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="subtraction">-</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="confirm">确定</string>
    <string name="select_category">选择类别</string>
    <string name="manage_category">管理类别</string>

    <string-array name="default_categories">
        <item>餐饮</item>
        <item>娱乐</item>
        <item>购物</item>
        <item>交通</item>
        <item>工资</item>
        <item>其他</item>
    </string-array>
    <string name="title_activity_manager_category">ManagerCategoryActivity</string>
    <string name="add_category">添加类别</string>
    <string name="input_new_category">请输入新类别</string>
    <string name="income_str">收入: %s</string>
    <string name="expend_str">支出: %s</string>
    <string name="account_tips">目前只支持默认账户，更多功能开发中~</string>
    <string name="number_error">金额有误！</string>
    <string name="new_record">新的一条记录已经生成了~</string>
    <string name="record">Jay的账本</string>
    <string name="manage_catrgory">管理类别</string>
    <string name="at_least_one">至少要留一种类别</string>
    <string name="title_activity_record_chart">RecordChartActivity</string>
    <string name="chart">图表</string>
    <string name="day_chart">日视图</string>
    <string name="week_chart">周视图</string>
    <string name="month_chart">月视图</string>
    <string name="year_chart">年视图</string>
    <string name="title_activity_sector">SectorActivity</string>
    <string name="income_percent">收入占比</string>
    <string name="expend_percent">支出占比</string>
    <string name="day_view">日视图</string>
    <string name="week_view">周视图</string>
    <string name="month_view">月视图</string>
    <string name="title_activity_recovery">RecoveryActivity</string>
    <string name="recovery_tips">下面是可供选择恢复的备份文件。需要注意的是, 恢复的同时会删除App原来的所有记录, 请谨慎恢复。</string>
    <string name="recovery_done">恢复完成</string>
    <string name="recovery_fail">恢复失败</string>
    <string name="backup_done">备份完成</string>
    <string name="backup_fail">备份失败</string>
    <string name="engel_coefficient">恩格尔系数</string>
    <string name="total">总计</string>
    <string name="unit_yuan">元</string>
    <string name="loading">正在加载…</string>
    <string name="back_uping">正在备份…</string>
    <string name="title_activity_backup">BackupActivity</string>
    <string name="backup">备份</string>
    <string name="backup_tips_1">将App中的记账记录备份到外部存储中, 避免丢失, 方便数据迁移。\n\n备份过程中请不要退出App, 并保持App在前台。\n\n备份文件存放在手机外部存储根目录下的jay_backups目录下。</string>
    <string name="start_backup">开始备份</string>
    <string name="histogram">柱状图</string>
    <string name="curve">曲线图</string>
    <string name="pie">饼图</string>
    <string name="nav_detail">支出/收入详情</string>
    <string name="nav_setting">设置</string>
    <string name="line_chart">折线图</string>
    <string name="no_remark">无备注</string>
    <string name="today_item">今天</string>
    <string name="rmb">元</string>
    <string name="file_delete_success">备份文件删除成功.</string>
    <string name="no_category">无类别</string>
    <string name="delete_category_tips">删除类别后, 对应的记录类别将变成\"无类别\"。</string>
    <string name="confirm_delete">确认删除？</string>
    <string name="about">关于</string>
    <string name="tools">工具</string>
    <string name="more">更多</string>
    <string name="select_from_store">从图库addEdit.getText().toString()选择</string>
    <string name="photo">拍照</string>
    <string name="select_img">修改头像</string>
    <string name="default_user_name">Jay Zhao</string>
    <string name="modify_name_tips">键入昵称</string>
    <string name="about_content">版本:1.0.0\n作者:赵家宝\n邮箱:1760064052@qq.com\nbug肯定是有的哈，大大的有，发现了就联系我，有奖励哦~\n咳咳，还有，有点简陋哈，签名都没弄，所以要是你手机里的杀毒软件说俺是病毒，直接忽略就行啦~
    对啦，源码都在我的Github主页上，欢迎访问:\nhttps://github.com/JayZhaoCN
    </string>
    <string name="modify_name_title">修改昵称</string>
    <string name="empty_data_tips">暂时没有记账数据，快去添加吧！</string>
    <string name="income_or_expend">收入还是支出？</string>
    <string name="edit_sum">编辑数值</string>
    <string name="edit_remark">编辑备注</string>
    <string name="remark_empty">无备注</string>
    <string name="delete_succes">成功删除一条记录</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="detail">详情</string>
    <string name="warning_input_zero">金额不得输入0</string>
    <string name="warning_input_not_match">金额输入不匹配</string>
    <string name="warning_title">警告</string>
    <string name="day_summary">收入: %1$s 支出: %2$s</string>
    <string name="total_summary">今日 入: %1$s 出: %2$s 总: %3$s</string>
    <string name="delete_confirm">确认删除这条记录吗？</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="edit_budget">修改每日预算</string>
    <string name="budget_cannot_be_zero">预算不可为0</string>
    <string name="balance_cannot_be_zero">初始值不可为0</string>
    <string name="set_budget">每日预算</string>
    <string name="edit_balance">修改初始值</string>
    <string name="remain_sum">账户余额</string>
    <string name="setting">设置</string>
    <string name="remain_summary">今日还可以花%1$s元</string>
    <string name="sector_type">%s  %s %%</string>
    <string name="category_exsit">类别已存在!</string>
</resources>
