<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/backup"
            android:title="@string/action_backup"/>
        <item
            android:id="@+id/nav_recovery"
            android:icon="@drawable/recovery"
            android:title="@string/action_recovery"/>
        <item
            android:id="@+id/nav_curve"
            android:icon="@drawable/ic_view_column"
            android:title="@string/curve"/>
        <item
            android:id="@+id/nav_pie_chart"
            android:icon="@drawable/ic_pie_chart"
            android:title="@string/pie"/>

        <item
            android:id="@+id/nav_detail"
            android:icon="@drawable/ic_subject"
            android:title="@string/nav_detail"/>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_subject"
            android:title="@string/nav_setting"/>

    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>
