<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/screen_tv"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center_vertical|end"
        android:text="0"
        android:textSize="40sp"
        tools:ignore="HardcodedText"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black80">

        <TableRow
            android:layout_weight="1">

            <TextView
                android:id="@+id/num_7"
                style="@style/TableItemStyle"
                android:text="@string/seven"/>

            <TextView
                android:id="@+id/num_8"
                style="@style/TableItemStyle"
                android:text="@string/eight"/>

            <TextView
                android:id="@+id/num_9"
                style="@style/TableItemStyle"
                android:text="@string/nine"/>

            <TextView
                android:id="@+id/operator_division"
                style="@style/TableItemStyle"
                android:text="@string/division"/>

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/num_4"
                style="@style/TableItemStyle"
                android:text="@string/four"/>

            <TextView
                android:id="@+id/num_5"
                style="@style/TableItemStyle"
                android:text="@string/five"/>

            <TextView
                android:id="@+id/num_6"
                style="@style/TableItemStyle"
                android:text="@string/six"/>

            <TextView
                android:id="@+id/operator_multi"
                style="@style/TableItemStyle"
                android:text="@string/multi"/>

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/num_1"
                style="@style/TableItemStyle"
                android:text="@string/one"/>

            <TextView
                android:id="@+id/num_2"
                style="@style/TableItemStyle"
                android:text="@string/two"/>

            <TextView
                android:id="@+id/num_3"
                style="@style/TableItemStyle"
                android:text="@string/three"/>

            <TextView
                android:id="@+id/operator_subtraction"
                style="@style/TableItemStyle"
                android:text="@string/subtraction"/>

        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/num_dot"
                style="@style/TableItemStyle"
                android:text="@string/dot"/>

            <TextView
                android:id="@+id/num_0"
                style="@style/TableItemStyle"
                android:text="@string/zero"/>

            <TextView
                android:id="@+id/equal"
                style="@style/TableItemStyle"
                android:text="@string/equal"/>

            <TextView
                android:id="@+id/operator_add"
                style="@style/TableItemStyle"
                android:text="@string/add"/>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/clean_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="清空"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/confirm_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>