<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_category"
            android:textColor="@color/black60"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/add_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:hint="@string/input_new_category"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/cancel_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>

            <TextView
                android:id="@+id/confirm_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/cancel_tv"
                android:text="@string/confirm"
                android:textColor="@color/colorAccent"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>