<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.hfut.zhaojiabao.myrecord.chart.RecordChart
        android:background="@color/dark_sky_blue_three"
        android:id="@+id/record_chart"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>

    <View
        android:background="@color/divider_line_color"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:ignore="NestedWeights">

            <RelativeLayout
                android:clickable="true"
                android:background="@drawable/item_bg"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/income"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:id="@+id/income_item_tips_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/income_value_tv"
                    tools:text="10"
                    android:textSize="35sp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <View
                android:background="@color/divider_line_color"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <RelativeLayout
                android:clickable="true"
                android:background="@drawable/item_bg"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/expend"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:id="@+id/expend_item_tips_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/expend_value_tv"
                    tools:text="10"
                    android:textSize="35sp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </LinearLayout>

        <View
            android:background="@color/divider_line_color"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <RelativeLayout
                android:clickable="true"
                android:background="@drawable/item_bg"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/engel_coefficient"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:id="@+id/engel_coefficient_item_tips_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/engel_coefficient_value_tv"
                    tools:text="0.9"
                    android:textSize="35sp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <View
                android:background="@color/divider_line_color"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>

            <RelativeLayout
                android:clickable="true"
                android:background="@drawable/item_bg"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/total"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:id="@+id/total_item_tips_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/total_value_tv"
                    tools:text="0"
                    android:textSize="35sp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:background="@color/divider_line_color"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:text="@string/day_view"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:text="@string/week_view"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:text="@string/month_view"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>
